--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@mui/material": "^5.8.5",
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.14",
-    "mpv.js": "github:DesterLib/mpv.js",
     "react": "^18.1.0",
     "recoil": "^0.7.4",
     "typescript": "^4.7.2"
   },
   "devDependencies": {
+    "@desterlib/mpv": "^0.34.3",
     "@types/react-dom": "^18.0.5",
     "concurrently": "^7.2.2",
     "cross-env": "^7.0.3",
