DEV: eslint + prettier for readability

--- a/package.json
+++ b/package.json
@@ -1,79 +1,89 @@
 {
-  "name": "@desterlib/dplayer",
-  "version": "0.0.10",
-  "description": "Dester's desktop video player",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "scripts": {
-    "prestart": "npm pkg set main=public/electron.js",
-    "start": "concurrently -k \"cross-env BROWSER=none react-app-rewired start\" \"wait-on http://localhost:3000 && electronmon .\"",
-    "build": "cross-os build:pre && tsc && cross-os build:post",
-    "publish": "npm run build && npm pkg set main=dist/index.js && npm publish"
-  },
-  "cross-os": {
-    "build:pre": {
-      "darwin": "rm -rf dist",
-      "linux": "rm -rf dist",
-      "win32": "rmdir /Q /S dist || exit 0"
+    "name": "@desterlib/dplayer",
+    "version": "0.0.10",
+    "description": "Dester's desktop video player",
+    "license": "MIT",
+    "main": "public/electron.js",
+    "scripts": {
+        "prestart": "npm pkg set main=public/electron.js",
+        "start": "concurrently -k \"cross-env BROWSER=none react-app-rewired start\" \"wait-on http://localhost:3000 && electronmon .\"",
+        "build": "cross-os build:pre && tsc && cross-os build:post",
+        "publish": "npm run build && npm pkg set main=dist/index.js && npm publish",
+        "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+        "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
+        "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json} .eslintrc.json .prettierrc.json package.json tsconfig.json --config .prettierrc.json"
     },
-    "build:post": {
-      "darwin": "cp -r src/styles dist/styles",
-      "linux": "cp -r src/styles dist/styles",
-      "win32": "robocopy src/styles dist/styles & robocopy node_modules/@desterlib/mpv/dist dist mpv-1.dll mpvjs.node || exit 0"
-    }
-  },
-  "dependencies": {
-    "@desterlib/mpv": "^0.34.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.5",
-    "@types/node": "^16.11.36",
-    "@types/react": "^18.0.14",
-    "react": "^18.1.0",
-    "recoil": "^0.7.4",
-    "typescript": "^4.7.2"
-  },
-  "devDependencies": {
-    "@types/react-dom": "^18.0.5",
-    "concurrently": "^7.2.2",
-    "cross-env": "^7.0.3",
-    "cross-os": "^1.5.0",
-    "electron": "^19.0.6",
-    "electronmon": "^2.0.2",
-    "path-browserify": "^1.0.1",
-    "react-app-rewired": "^2.2.1",
-    "react-dom": "^18.2.0",
-    "wait-on": "^6.0.1"
-  },
-  "contributors": [
-    {
-      "name": "Elias Benbourenane",
-      "email": "me@elias.eu.org",
-      "url": "https://elias.eu.org"
+    "cross-os": {
+        "build:pre": {
+            "darwin": "rm -rf dist",
+            "linux": "rm -rf dist",
+            "win32": "rmdir /Q /S dist || exit 0"
+        },
+        "build:post": {
+            "darwin": "cp -r src/styles dist/styles",
+            "linux": "cp -r src/styles dist/styles",
+            "win32": "robocopy src/styles dist/styles & robocopy node_modules/@desterlib/mpv/dist dist mpv-1.dll mpvjs.node || exit 0"
+        }
     },
-    {
-      "name": "Alken D",
-      "email": "desteralken@gmail.com",
-      "url": "https://github.com/AlkenD"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DesterLib/DPlayer.git"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "dependencies": {
+        "@desterlib/mpv": "^0.34.3",
+        "@emotion/styled": "^11.9.3",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/material": "^5.8.5",
+        "@types/node": "^16.11.36",
+        "@types/react": "^18.0.14",
+        "react": "^18.1.0",
+        "typescript": "^4.7.2"
+    },
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+        "@types/react-dom": "^18.0.5",
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
+        "concurrently": "^7.2.2",
+        "cross-env": "^7.0.3",
+        "cross-os": "^1.5.0",
+        "electron": "^19.0.6",
+        "electronmon": "^2.0.2",
+        "eslint": "^8.18.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.30.1",
+        "path-browserify": "^1.0.1",
+        "prettier": "^2.7.1",
+        "react-app-rewired": "^2.2.1",
+        "react-dom": "^18.2.0",
+        "wait-on": "^6.0.1"
+    },
+    "contributors": [
+        {
+            "name": "Elias Benbourenane",
+            "email": "me@elias.eu.org",
+            "url": "https://elias.eu.org"
+        },
+        {
+            "name": "Alken D",
+            "email": "desteralken@gmail.com",
+            "url": "https://github.com/AlkenD"
+        }
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/DesterLib/DPlayer.git"
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
