--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "noImplicitAny": false,
         "jsx": "react-jsx",
         "declaration": true,
-        "outDir": "dist",
+        "outDir": "dist"
     },
     "include": ["src"]
 }
